# paper_ADAMS_1step_2

./: .gitignore  README.md  main.py  pyproject.toml  데이터전처리.md  실습단계.txt
main_exper/: 1.data_preprocessing.py  2.ground_truth_label.py  5.run_all_experiments.py  6-1.performance_comparison.py  6-2.confusion matrix visualization.py  6-3.per_class_analysis.py  6-4.error_case_analysis.py  6-5.paper_figures_tables.py  gpt4o_experiment.py  kosbert_experiment.py  ncs_references.py
main_exper/datas/ground_truth/: ground_truth_labeling_template.xlsx
main_exper/datas/preprocessed/: preprocessed_jobposting_with_postid.csv
main_exper/datas/raw/: 1단계_7생성형ai_llm_3개월 조사_data_0301_134개.xlsx  ncs_info.xlsx  통합_AI세분류_7개직군_jobposting280_0331_김경하.xlsx  통합_AI세분류_7개직군_jobposting280_0331_중복제거_v2.csv  통합_AI세분류_7개직군_jobposting280_0331_중복제거_v2.xlsx  통합_AI세분류_7개직군_jobposting280_0331_황규대.xlsx
main_exper/outputs/analysis/: table_detailed_metrics.csv  table_gpt4o_class_accuracy.csv  table_gpt4o_error_cases.csv  table_gpt4o_error_patterns.csv  table_gpt4o_error_types.csv  table_gpt4o_misclassification.csv  (+9 more)
main_exper/temp/: 1.데이터 전처리.ipynb  2.매핑 실행__flat_SBERT.ipynb  3. gold_standard_smpling.ipynb  4.IAA_계산하기_top1_top3_mapping.ipynb  5.sbert_hier_top3.ipynb  7.LLM정력 코드_top3.ipynb
pilot_v1/: 1.데이터 전처리.ipynb  2.매핑 실행__flat_SBERT.ipynb  6.sbert_flat_vs_hier.ipynb
pilot_v1/outputs/: llm_top3.csv  role_overlap_pairs_all.csv  role_overlap_pairs_ge_70.csv  role_overlap_pairs_ge_80.csv  role_similarity_matrix.csv  role_top3_neighbors.csv  sbert_hier_top3.csv  sbert_pilot_top3.csv
(+23 files in other folders)
